--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,8 @@
     "storage"
   ],
   "host_permissions": [
-    "https://chat.openai.com/*"
+    "https://chat.openai.com/*",
+    "https://chatgpt.com/*"
   ],
   "background": {
     "service_worker": "background.js",
@@ -20,7 +21,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://chat.openai.com/*"],
+      "matches": ["https://chat.openai.com/*", "https://chatgpt.com/*"],
       "js": ["content-script.js"],
       "css": ["styles.css"]
     }
